--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(pcl_msgs REQUIRED)
+find_package(eufs_msgs REQUIRED)
 
 # Additional system dependencies
 find_package(PCL REQUIRED COMPONENTS segmentation filters kdtree)
@@ -40,6 +41,7 @@ ament_target_dependencies(${PROJECT_NAME}_node
   visualization_msgs
   pcl_conversions
   pcl_msgs
+  eufs_msgs
 )
 
 # Link PCL libraries manually if required
@@ -53,7 +55,7 @@ install(TARGETS ${PROJECT_NAME}_node
 )
 
 # Install header files
-install(DIRECTORY include/
+install(DIRECTORY include/ 
   DESTINATION include/
 )
 
