--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <depend>pcl_ros</depend>
   <depend>pcl_msgs</depend>
   <depend>Eigen3</depend>
+  <depend>eufs_msgs</depend>
 
   <!-- Build dependencies -->
   <build_depend>visualization_msgs</build_depend>
